--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Minimal theme
-logo: /assets/img/logo.png
+title: Santhosh Kumari Kage
+logo: /assets/img/san_pic.jpg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
