changed the logo

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Santhosh Kumari Kage
-logo: /assets/img/san_pic.jpg
+logo: /assets/img/logo.jpeg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
